# naive-ieee754

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: generate_readme_images.py
examples/: ieee754_overview.py
notebooks/: ieee754_overview.ipynb
src/naive_ieee754/: __init__.py  _binary.py  arithmetic.py  bits.py  core.py  flags.py  floats.py  formats.py  rounding.py  special.py  visualization.py
tests/: test_arithmetic.py  test_core.py  test_exhaustive_float16.py  test_exhaustive_float8.py  test_formats.py  test_rounding.py  test_sampled_float32.py  test_sampled_float64.py  test_special.py  test_visualization.py
